Fix 500 Internal Server Error in /api/scan endpoint