@@ -3,6 +3,7 @@ package com.repoguard.service;
 import org.springframework.stereotype.Service;
 
 import java.io.*;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.*;
 import java.util.zip.ZipEntry;
@@ -18,25 +19,34 @@ public class GithubService {
         try {
             File tempDir = new File(TEMP_DIR);
 
+            // Clean up repoUrl (trailing slash)
+            if (repoUrl.endsWith("/")) {
+                repoUrl = repoUrl.substring(0, repoUrl.length() - 1);
+            }
+
+            // Extract repo name and strip .git
+            String repoName = repoUrl.substring(repoUrl.lastIndexOf("/") + 1);
+            if (repoName.endsWith(".git")) {
+                repoName = repoName.substring(0, repoName.length() - 4);
+            }
+
             // 🔥 STEP 1: Clean old repos (VERY IMPORTANT)
             if (tempDir.exists()) {
                 deleteDirectory(tempDir);
             }
             tempDir.mkdirs();
 
-            // Extract repo name
-            String repoName = repoUrl.substring(repoUrl.lastIndexOf("/") + 1);
-
             // 🔥 STEP 2: Try main and master branch
-            String zipUrlMain = repoUrl + "/archive/refs/heads/main.zip";
-            String zipUrlMaster = repoUrl + "/archive/refs/heads/master.zip";
+            String baseZipUrl = repoUrl.replace(".git", "");
+            String zipUrlMain = baseZipUrl + "/archive/refs/heads/main.zip";
+            String zipUrlMaster = baseZipUrl + "/archive/refs/heads/master.zip";
 
             InputStream in;
 
             try {
-                in = new URL(zipUrlMain).openStream();
+                in = URI.create(zipUrlMain).toURL().openStream();
             } catch (Exception e) {
-                in = new URL(zipUrlMaster).openStream();
+                in = URI.create(zipUrlMaster).toURL().openStream();
             }
 
             ZipInputStream zis = new ZipInputStream(in);
@@ -72,13 +82,15 @@ public class GithubService {
 
             if (files != null) {
                 for (File f : files) {
-                    if (f.getName().startsWith(repoName)) {
-                        return f.getAbsolutePath(); // ✅ correct repo folder
+                    // Match repo name exactly or check if file starts with it
+                    // GitHub ZIP folders are typically 'repo-name-main' or 'repo-name-master'
+                    if (f.getName().equalsIgnoreCase(repoName) || f.getName().startsWith(repoName + "-")) {
+                        return f.getAbsolutePath();
                     }
                 }
             }
 
-            throw new RuntimeException("Repo extraction failed");
+            throw new RuntimeException("Repo extraction failed for: " + repoName);
 
         } catch (Exception e) {
             throw new RuntimeException("Error downloading repo: " + e.getMessage());
@@ -88,8 +100,11 @@ public class GithubService {
     // Utility method to delete folder
     private void deleteDirectory(File file) {
         if (file.isDirectory()) {
-            for (File sub : file.listFiles()) {
-                deleteDirectory(sub);
+            File[] files = file.listFiles();
+            if (files != null) {
+                for (File sub : files) {
+                    deleteDirectory(sub);
+                }
             }
         }
         file.delete();
